--- a/index.html
+++ b/index.html
@@ -134,8 +134,8 @@
       <h3>Email Newsletter</h3>
       <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
       <form name="contact" method="POST" data-netlify="true">
-        <input type="email" name="email" placeholder="Enter Email...">
-        <input type="submit" name="submit" value="Subscribe" class="btn btn-primary">
+        <input name="email" type="email"  placeholder="Enter Email...">
+        <input name="submit" type="submit"  value="Subscribe" class="btn btn-primary">
       </form>
     </div>
     <div>
